--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,18 @@
 *.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
 /.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
 .DS_Store
 /build
 /captures
 .externalNativeBuild
+
+# IntelliJ
+.idea
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/gradle.xml
+.idea/dictionaries
+.idea/libraries
