--- a/config.gradle
+++ b/config.gradle
@@ -31,7 +31,7 @@ ext {
             "junit"                     : 'junit:junit:4.12',
 
             "module_support"            : project(':module_support'),
-//            "module_api"                : project(':module_api'),
+            "module_api"                : project(':module_api'),
 //            "module_picbrowser"         : project(':picbrowserlib'),
 
             //magicIndicator
