--- a/module_support/build.gradle
+++ b/module_support/build.gradle
@@ -47,10 +47,5 @@ dependencies {
     api rootProject.ext.dependencies["material-dialogs"]
     testImplementation rootProject.ext.dependencies["junit"]
 
-    //rxlifecycle2
-//    implementation rootProject.ext.dependencies["rxlifecycle2"]
-//    implementation rootProject.ext.dependencies["rxlifecycle2_android"]
-//    implementation rootProject.ext.dependencies["rxlifecycle_components"]
-
-    implementation rootProject.ext.dependencies["pickerview"]
+    api rootProject.ext.dependencies["Android_Pickerview"]
 }
