--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,22 +25,27 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/KotlinDemoAppTheme.NoActionBar"
+        android:theme="@style/KotlinDemoAppTheme"
         tools:replace="android:theme">
 
         android:networkSecurityConfig="@xml/network_security_config">
         <!--9.0加的，哦哦-->
         <uses-library
             android:name="org.apache.http.legacy"
-            android:required="false" />
+            android:required="false"/>
 
-        <activity android:name=".mvp.splash.SplashActivity">
+        <activity
+            android:name=".mvp.splash.SplashActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/SplashFullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".mvp.main.MainActivity"/>
+        <activity
+            android:name=".mvp.main.MainActivity"
+            android:screenOrientation="portrait"/>
 
     </application>
 
