搜索页界面搭建完成，跳转场景动画未完成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,10 @@
             android:name=".mvp.main.MainActivity"
             android:screenOrientation="portrait"/>
 
+        <activity
+            android:name=".mvp.search.SearchActivity"
+            android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
