--- a/config.gradle
+++ b/config.gradle
@@ -1,7 +1,7 @@
 ext {
     android = [
             compileSdkVersion: 26,
-            buildToolsVersion: '27.0.3',
+            buildToolsVersion: '28.0.3',
 
             minSdkVersion    : 21,
             targetSdkVersion : 26,
@@ -26,7 +26,7 @@ ext {
             //android support
             "annotations"               : "com.android.support:support-annotations:${android["supportLibVersion"]}",
             "appcompat-v7"              : "com.android.support:appcompat-v7:${android["supportLibVersion"]}",
-            "constraint_layout"         : "com.android.support.constraint:constraint-layout:+",
+            "constraint_layout"         : "com.android.support.constraint:constraint-layout:1.1.0",
             "recyclerview"              : "com.android.support:recyclerview-v7:${android["supportLibVersion"]}",
             "design"                    : "com.android.support:design:${android.get('supportLibVersion')}",
             "cardview"                  : "com.android.support:cardview-v7:${android.supportLibVersion}",
