--- a/app/dependence.gradle
+++ b/app/dependence.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation rootProject.ext.dependencies["rxjava2"]
     implementation rootProject.ext.dependencies["rxandroid2"]
 
+    implementation rootProject.ext.dependencies["Rxbinding2"]
 
     //工具类
     implementation rootProject.ext.dependencies["module_support"]
