视屏详情页搭建，组件初始化未完成

--- a/app/dependence.gradle
+++ b/app/dependence.gradle
@@ -49,6 +49,8 @@ dependencies {
 
     implementation rootProject.ext.dependencies["logger"]
 
+    implementation rootProject.ext.dependencies["GSYVideoPlayer"]
+
     implementation rootProject.ext.dependencies["butterknife"]
     kapt rootProject.ext.dependencies["butterknife_compiler"]
 
