--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,12 +23,13 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/KotlinDemoAppTheme"
+        tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:theme">
 
-        android:networkSecurityConfig="@xml/network_security_config">
         <!--9.0加的，哦哦-->
         <uses-library
             android:name="org.apache.http.legacy"
@@ -51,6 +52,9 @@
             android:name=".mvp.search.SearchActivity"
             android:screenOrientation="portrait"/>
 
+        <activity
+            android:name=".mvp.videodetail.VideoDetailActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
