还剩个人页未开发，其余三个大模块都完成了

--- a/app/dependence.gradle
+++ b/app/dependence.gradle
@@ -45,6 +45,8 @@ dependencies {
 
     implementation rootProject.ext.dependencies["easypermission"]
 
+//    implementation 'com.jacky:AndroidWatermarkCamera:0.0.1'
+
     implementation rootProject.ext.dependencies["glide"]
     implementation rootProject.ext.dependencies["glide_okhttp_integration"]
     kapt rootProject.ext.dependencies["glide_compiler"]
