--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
     <application
         android:name=".app.App"
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -61,6 +62,12 @@
 
         <activity
             android:name=".mvp.about.AboutActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".mvp.userinfo.UserInfoActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".mvp.watchhistory.WatchHistoryActivity"
             android:screenOrientation="portrait"/>
     </application>
 
