--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,14 @@
 apply from: 'config.gradle'
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
+    ext.kotlin_version = '1.5.21'
     repositories {
-        //友盟
-        maven { url 'https://dl.bintray.com/umsdk/release' }
         jcenter()
         mavenCentral() // add repository
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:4.2.2'
 
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
@@ -20,10 +18,8 @@ buildscript {
 allprojects {
     repositories {
         //阿里镜像仓库
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
-        //友盟
-        maven { url 'https://dl.bintray.com/umsdk/release' }
+        maven { url 'https://maven.aliyun.com/repository/public/' }
+        maven { url 'https://maven.aliyun.com/repository/google/' }
         jcenter()
         mavenCentral() // add repository
         google()
