--- a/config.gradle
+++ b/config.gradle
@@ -6,8 +6,8 @@ ext {
             minSdkVersion    : 23,
             targetSdkVersion : 29,
 
-            versionCode      : 1,
-            versionName      : '1.0.0'
+            versionCode      : 2,
+            versionName      : '1.0.1'
     ]
 
     dependencies = [
@@ -82,7 +82,7 @@ ext {
             "picasso"                        : 'com.squareup.picasso:picasso:2.5.2',
 
             //blureview 透明效果
-            blurview                         : 'com.github.mmin18:realtimeblurview:1.1.2',
+            blurview                         : 'com.github.mmin18:realtimeblurview:1.2.1',
 
             //baseAdapter ForRecyclerView
             "base_rvadapter"                 : 'com.zhy:base-rvadapter:3.0.3',
@@ -113,10 +113,8 @@ ext {
             "retrofit_converter_scalars"     : 'com.squareup.retrofit2:converter-scalars:2.9.0',
             "retrofit_rxjava2_adapter"       : 'com.squareup.retrofit2:adapter-rxjava2:2.9.0',
             retrofitConverterGson            : "com.squareup.retrofit2:converter-gson:2.9.0",
-            //结合rxjava2使用
-            "rxpermissions"                  : "com.github.tbruyelle:rxpermissions:0.10.2",
-            //运行时权限
-            easypermission                   : "pub.devrel:easypermissions:2.0.0",
+            //xxpermission
+            "xxpermissions"                  : "com.github.getActivity:XXPermissions:16.2",
             //rxbinding3
             Rxbinding2                       : 'com.jakewharton.rxbinding2:rxbinding:2.1.1',
 
@@ -137,8 +135,8 @@ ext {
             "photoview-smooth"               : "com.bm.photoview:library:1.4.1",
             "pickerview"                     : "com.contrarywind:Android-PickerView:4.1.6",
             //bugly升级
-            "bugly_upgrade"                  : 'com.tencent.bugly:crashreport_upgrade:latest.release',
-            "bugly_native"                   : 'com.tencent.bugly:nativecrashreport:latest.release',
+            "bugly_upgrade"                  : 'com.tencent.bugly:crashreport_upgrade:1.6.1',
+            "bugly_native"                   : 'com.tencent.bugly:nativecrashreport:3.9.2',
 
             "greendao"                       : "org.greenrobot:greendao:3.2.2",
             "greendao-generator"             : "org.greenrobot:greendao-generator:3.2.2",
@@ -146,7 +144,7 @@ ext {
 
             //gsy player
             //完整版引入
-            "GSYVideoPlayer"                 : 'com.github.CarGuo.GSYVideoPlayer:GSYVideoPlayer:v8.1.9-release-jitpack',
+            "GSYVideoPlayer"                 : 'com.github.CarGuo.GSYVideoPlayer:GSYVideoPlayer:v8.3.4-release-jitpack',
 
             "amap-3dmap"                     : "com.amap.api:3dmap:latest.integration", //3D地图
             "amap-2dmap"                     : "com.amap.api:map2d:latest.integration",//  2D地图
